# AV_IRL

./: .gitignore  LICENSE  README.md  final_eval.py  pyproject.toml  requirements.txt
analysis/: compare_models.py
av_irl/: __init__.py  driving_style.py  gat.py  safe_distance.py  slot_attention.py  zero_reward.py
scripts/: airl_expert_ppo_training.py  airl_train_loop.py  expert_ppo_training.py  final_eval.py  gail_train_loop.py  generate_rollouts.py  learner_airl_gat_train.py  learner_airl_slot_train.py  learner_airl_train.py  learner_airl_train_loop.py  learner_gail_gat_train.py  learner_gail_slot_train.py  learner_gail_train.py  learner_gail_train_loop.py  reward_comparison.py  run_pipeline.sh  tmp.py
tests/: test_safe_distance.py
